# opengl-linux

./: CMakeLists.txt
include/: vect.h
includes/learnopengl/: model.h
model/: tendon.xml
resources/objects/backpack/: backpack.mtl
sample/: CMakeLists.txt  REFERENCE  basic.cc  dynahex.c  dynahex.cc  fuck.c  hexapod_footpath.cc  kinematics.c  kinematics.cc  testfcn.cc  trig_fixed.cc  trig_fixed.h  vect.cc  vect.h
sample/m_kinematics/: CMakeLists.txt  dynahex.c  kinematics.c  vect.c
sample/testlib/: CMakeLists.txt  testfcn.h
src/: multiple_lights.cpp
src/2.lighting/6.multiple_lights/: AssetModel.h  multiple_lights.cpp
src/3.model_loading/1.model_loading/: model_loading.cpp
src/5.advanced_lighting/9.ssao/: ssao.cpp
src/m_kinematics/: CMakeLists.txt
